--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ License: GNU General Public License
 License URI: license.txt
 Tags: two-columns, left-sidebar, right-sidebar, flexible-width, custom-menu, full-width-template, microformats, post-formats, rtl-language-support, theme-options, translation-ready
 Text Domain: portfolio-press
-Domain Path: /languages 
+Domain Path: /languages
 Template: portfolio-press
 */
 
@@ -308,7 +308,7 @@ a:active .bot-right {
     margin-right: -12px;
   }
 
-  .single-film_music .primary-navigation ul li.current-menu-item > a, 
+  .single-film_music .primary-navigation ul li.current-menu-item > a,
   .primary-navigation ul > li:hover > a {
     border-radius: 2px;
     color: #fff;
@@ -396,7 +396,7 @@ a {
   height: 1px;
   background: #ddd;
   box-shadow: 0 1px 0 0 #fff;
-  content: ""; 
+  content: "";
   margin-bottom: 60px;
   margin-top: 60px;
 }
@@ -406,18 +406,18 @@ a {
   float: left;
 }
  .prev-post a:before {
-  content: "previous: "; 
+  content: "previous: ";
   font-weight: 400;
-} 
+}
 .next-post a {
   display: inline-block;
   max-width: 45%;
   float: right;
 }
  .next-post a:before {
-  content: "next: "; 
+  content: "next: ";
   font-weight: 400;
-} 
+}
 
 .publication-website {
   display: inline-block;
@@ -434,7 +434,7 @@ a {
     height: 1px;
     background: #ddd;
     box-shadow: 0 1px 0 0 #fff;
-    content: ""; 
+    content: "";
     margin-top: 90px;
   }
 }
@@ -468,7 +468,7 @@ a {
 }
 .single-guest_artist .widget-container {
   max-width: 300px;
-} 
+}
 
 
 
@@ -527,7 +527,7 @@ a {
 @media (max-width: 779px) {
   .post-type-archive-shop_item article {
     padding: 20px;
-  }  
+  }
   .post-type-archive-shop_item article .shop-image {
     width: 50%;
     float: left;
@@ -540,7 +540,7 @@ a {
     padding-right: 0;
     padding-left: 20px;
     padding-bottom: 20px;
-  }  
+  }
   .post-type-archive-shop_item article .shop-description {
     width: 100%;
     float: left;
@@ -565,7 +565,7 @@ a {
   .post-type-archive-shop_item article .shop-info {
     padding-left: 0;
     padding-bottom: 20px;
-  }  
+  }
 }
 
 
@@ -613,7 +613,7 @@ a {
   font-size: 16px;
 }
 #footer-widgets .block {
-  padding: 0; 
+  padding: 0;
 }
 
 @media (max-width: 680px) {
@@ -689,9 +689,28 @@ a {
 
 
 
+/* ______ envira gallery ______ */
 
-#envira-gallery-374 .envirabox-skin { padding: 0 !important; }
-#envira-gallery-374 .envirabox-overlay { background: rgba(245,245,240,0.8) !important; }
+/*#envira-gallery-374 .envirabox-skin { padding: 0 !important; }*/
+/*#envira-gallery-374 .envirabox-overlay { background: rgba(245,245,240,0.8) !important; }*/
 
+.envirabox-skin {
+    padding: 0 !important;
+}
 
+.envirabox-opened .envirabox-skin {
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+.envirabox-title-outside-wrap {
+    color: red !important;
+}
+
+/*i don't know why, but the white overlay in the slide nav was coming from #logo #site-title a:focus, a:hover*/
+a.envirabox-nav.envirabox-next.envirabox-arrows-inside:hover,
+a.envirabox-nav.envirabox-prev.envirabox-arrows-inside:hover {
+    background: none;
+}
 
