--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ License: GNU General Public License
 License URI: license.txt
 Tags: two-columns, left-sidebar, right-sidebar, flexible-width, custom-menu, full-width-template, microformats, post-formats, rtl-language-support, theme-options, translation-ready
 Text Domain: portfolio-press
-Domain Path: /languages
+Domain Path: /languages 
 Template: portfolio-press
 */
 
@@ -77,55 +77,55 @@ body{
   background: #cbded9;
 }
 
-a:link .top-left {
+.home a:link .top-left {
   background-color: #be98c6;
 }
-a:link .top-right {
+.home a:link .top-right {
   background-color: #f5f5f0;
 }
-a:link .bot-left {
+.home a:link .bot-left {
   background-color: #cecece;
 }
-a:link .bot-right {
+.home a:link .bot-right {
   background-color: #cbded9;
 }
 
-a:visited .top-left {
+.home a:visited .top-left {
   background-color: #BE98C6;
 }
-a:visited .top-right {
+.home a:visited .top-right {
   background-color: #f5f5f0;
 }
-a:visited .bot-left {
+.home a:visited .bot-left {
   background-color: #cecece;
 }
-a:visited .bot-right {
+.home a:visited .bot-right {
   background-color: #cbded9;
 }
 
-a:focus, a:hover .top-left {
+.home a:focus, .home a:hover .top-left {
   background-color: #B3FF8D;
 }
-a:focus, a:hover .top-right {
+.home a:focus, .home a:hover .top-right {
   background-color: #D7F7F4;
 }
-a:focus, a:hover .bot-left {
+.home a:focus, .home a:hover .bot-left {
   background-color: #233B8B;
 }
-a:focus, a:hover .bot-right {
+.home a:focus, .home a:hover .bot-right {
   background-color: #FFFF00;
 }
 
-a:active .top-left {
+.home a:active .top-left {
   background-color: #B3FF8D;
 }
-a:active .top-right {
+.home a:active .top-right {
   background-color: #D7F7F4;
 }
-a:active .bot-left {
+.home a:active .bot-left {
   background-color: #233B8B;
 }
-a:active .bot-right {
+.home a:active .bot-right {
   background-color: #FFFF00;
 }
 
@@ -257,6 +257,7 @@ a:active .bot-right {
 /* ______ branding ______ */
 #branding {
   background: #7891A9;
+  padding: 18px 0;
 }
 
 @media (min-width: 780px) {
@@ -308,7 +309,7 @@ a:active .bot-right {
     margin-right: -12px;
   }
 
-  .single-film_music .primary-navigation ul li.current-menu-item > a,
+  .single-film_music .primary-navigation ul li.current-menu-item > a, 
   .primary-navigation ul > li:hover > a {
     border-radius: 2px;
     color: #fff;
@@ -396,7 +397,7 @@ a {
   height: 1px;
   background: #ddd;
   box-shadow: 0 1px 0 0 #fff;
-  content: "";
+  content: ""; 
   margin-bottom: 60px;
   margin-top: 60px;
 }
@@ -406,18 +407,18 @@ a {
   float: left;
 }
  .prev-post a:before {
-  content: "previous: ";
+  content: "previous: "; 
   font-weight: 400;
-}
+} 
 .next-post a {
   display: inline-block;
   max-width: 45%;
   float: right;
 }
  .next-post a:before {
-  content: "next: ";
+  content: "next: "; 
   font-weight: 400;
-}
+} 
 
 .publication-website {
   display: inline-block;
@@ -434,7 +435,7 @@ a {
     height: 1px;
     background: #ddd;
     box-shadow: 0 1px 0 0 #fff;
-    content: "";
+    content: ""; 
     margin-top: 90px;
   }
 }
@@ -468,7 +469,7 @@ a {
 }
 .single-guest_artist .widget-container {
   max-width: 300px;
-}
+} 
 div#custom-post-type-recent-posts-2 ul li:first-of-type {
     display: none;
 }
@@ -529,7 +530,7 @@ div#custom-post-type-recent-posts-2 ul li:first-of-type {
 @media (max-width: 779px) {
   .post-type-archive-shop_item article {
     padding: 20px;
-  }
+  }  
   .post-type-archive-shop_item article .shop-image {
     width: 50%;
     float: left;
@@ -542,7 +543,7 @@ div#custom-post-type-recent-posts-2 ul li:first-of-type {
     padding-right: 0;
     padding-left: 20px;
     padding-bottom: 20px;
-  }
+  }  
   .post-type-archive-shop_item article .shop-description {
     width: 100%;
     float: left;
@@ -567,7 +568,7 @@ div#custom-post-type-recent-posts-2 ul li:first-of-type {
   .post-type-archive-shop_item article .shop-info {
     padding-left: 0;
     padding-bottom: 20px;
-  }
+  }  
 }
 
 
@@ -615,7 +616,7 @@ div#custom-post-type-recent-posts-2 ul li:first-of-type {
   font-size: 16px;
 }
 #footer-widgets .block {
-  padding: 0;
+  padding: 0; 
 }
 
 @media (max-width: 680px) {
@@ -797,16 +798,3 @@ a.envirabox-prev span {
     right: 50px !important;
   }
 
-
-/*body.single-Guest_artist {
-  position: relative;
-}
-a.envirabox-close {
-  position: absolute;
-  top: -30px;
-  right: -60px;
-}
-
-a#envira-buttons.bottom ul li#envira-buttons-title {
-  display: none!important;
-}*/
